js/js.translator/testData/incremental/invalidationWithPL/interfaceBecomeClass/lib1/l1.5.kt
open class Foo {
    open fun getSomething() = 7
}
